--- a/client/src/Components/LandingPage/LandingPage.module.css
+++ b/client/src/Components/LandingPage/LandingPage.module.css
@@ -1,15 +1,42 @@
-.mainDiv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-image: url('./Images/LANDING PHOTO.jpg');
-    background-size: cover;
+.background{
+  background-image: url('./Images/LANDING PHOTO.jpg');
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+  background-repeat: no-repeat;
+  align-items: center;
 }
 
 
-.button85 {
+.divStyle {
+    justify-items: center;
+    align-items: center;
+    justify-content: center;
+    display: inline-block;
+}
+
+h1{
+  display: inline;
+  align-items: center;
+  font-weight: bold;
+  margin-left: 11%;
+  margin-top: 10vh;
+  font-family: fantasy;
+  font-size: 3rem;
+  color: #367cec;
+}
+
+h2{
+  display: ruby-text;
+  font-family: fantasy;
+  font-size: 2rem;
+  color: #7a1703;
+}
+
+.button {
+      margin-left: 37%;
+      align-items: center;
       padding: 1.5em 3em;
       border: 0;
       outline: none;
@@ -26,7 +53,7 @@
       letter-spacing: .25em;
     }
     
-.button85:before {
+.button:before {
       content: "";
       background: linear-gradient(
         45deg,
@@ -66,7 +93,7 @@
       }
     }
     
-.button85:after {
+.button:after {
       z-index: -1;
       content: "";
       position: absolute;
@@ -78,7 +105,7 @@
       border-radius: 10px;
     }
 
-.button85:hover {
+.button:hover {
         background-color: white; 
         color: rgb(255, 0, 157);
         cursor: pointer;
@@ -88,26 +115,3 @@
 
     }
 
-
-
-
-
-/* .button {
-    -webkit-transition-duration: 0.4s; 
-    transition-duration: 0.4s;
-    padding: 3px;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-family: helvetica;
-    font-weight: 300;
-    font-size: 25px;
-    font-style: italic;
-    border-radius: 15px;
-    border: 3px double #006505;
-}
-
-.button:hover {
-    background-color: black; 
-    color: white;
-    cursor: pointer;
-} */
